# rupy

./: .coderabbit.yaml  .deepsource.toml  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ERGONOMICS_IMPROVEMENTS.md  GITHUB_PAGES_SETUP.md  INSTRUCTIONS.md  PERFORMANCE_IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  SECURITY_IMPROVEMENTS.md  TEMPLATE_DOCUMENTATION.md  TEMPLATE_FEATURES.md  example.py  index.html  pyproject.toml  sonar-project.properties  test_rupy.py  test_rust_app.py  test_sync_app.py
.github/workflows/: build.yml  ci.yml  publish.yml  weekly-dependency-upgrade.yml
benchmark/: README.md
benchmark/ansible-deployment/: deploy.sh  requirements.txt
benchmark/fastapi/: Dockerfile  main.py
benchmark/flask/: Dockerfile  main.py
benchmark/load-test/: README.md  benchmark.sh  docker-compose.yml  locustfile.py  test_apis.py
benchmark/load-test/django-pg-upsert-select/: app.py  requirements.txt
benchmark/load-test/fastapi-pg-upsert-select/: Dockerfile  app.py  requirements.txt
benchmark/load-test/flask-pg-upsert-select/: app.py  requirements.txt
benchmark/load-test/mrhttp-pg-upsert-select/: app.py  requirements.txt
benchmark/load-test/robyn-pg-upsert-select/: app.py  requirements.txt
benchmark/load-test/rupy-pg-upsert-select/: Dockerfile  app.py  requirements.txt
benchmark/robyn/: main.py
benchmark/rupy/: main.py
examples/: README.md  all_methods.py  basic_app.py  combined_middlewares.py  cookies_auth_example.py  cors_middleware.py  dynamic_routes.py  geo_blocking_middleware.py  headers_example.py  json_api.py  jwt_middleware.py  method_decorators.py  multi_route.py  openapi_example.py  query_string_example.py  rate_limiting_middleware.py  rest_api.py  reverse_proxy_example.py  simple_app.py  static_files_example.py  static_files_example_2.py  telemetry_example.py  template_class_example.py  template_example.py  upload_example.py
examples/static/css/: styles.css
python/rupy/: __init__.py  app.py  request.py  routing.py
rupy/: __init__.py  response.py
src/: app.rs  lib.rs  request.rs  response.rs  routing.rs  server.rs  telemetry.rs  template.rs  upload.rs
tests/: __init__.py  test_advanced_proxy_static.py  test_cookies_auth.py  test_headers.py  test_http_methods.py  test_method_decorators.py  test_middleware_headers.py  test_middlewares.py  test_new_features.py  test_proxy_static_response.py  test_query_string.py  test_template.py  test_template_class.py  test_upload.py
