[package]
name = "rupy"
version = "0.1.0"
edition = "2021"

[lib]
name = "rupy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "trace", "logs"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.27"
tower-http = { version = "0.6", features = ["trace"] }
